parse-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parse-server
  namespace: default
  labels:
    run: parse-server
spec:
  selector:
    matchLabels:
      app: parse-server
  template:
    metadata:
      labels:
        app: parse-server
    spec:
      containers:
      - name: parse-server
        image: parseplatform/parse-server:5.4.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "500m"
