parse-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: parse-svc
  namespace: default
spec:
  ports:
  - port: 1337
    targetPort: 1337
    protocol: TCP
  selector:
    run: parse-server
