constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPLimitContainer
metadata:
  name: psp-limit-container
  namespace: default
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNamespace
metadata:
  name: enforce-namespace
  namespace: default
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["*"]
  parameters:
    allowedNamespaces:
      - kube-system
      - default
      - production
      - staging
