image-tag-policy.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspimagetag
  namespace: default
spec:
  crd:
    spec:
      names:
        kind: K8sPSPImageTag
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspimagetag

        violation[{"msg": msg, "details": {}}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, ":*")
          msg = sprintf("Image '%v' is not allowed", [container.image])
        }
