rslimit.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spsplimitcontainer
  namespace: default
spec:
  crd: #
    spec:
      names: 
        kind: K8sPSPLimitContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package limitsresources
        default limit = -1
        violation[{"msg": msg, "details": {}}] {
          resource = {
            "name": "resource1",
            "limit": -1
          }
          limit = resource.limit
          msg = sprintf("resource '%v' does not have a limit specification", [resource.name])
        }
